# TissueLab

./: .gitattributes  .gitignore  .pr_agent.toml  LICENSE  README.md
app/service/: .env  .env.dev  .env.prod  .gitignore  main.py  main.spec  main_macos.spec  pyproject.toml  requirements-linux.txt  requirements-macos.txt  requirements-packaging.txt  requirements-windows.txt  setup.cfg
app/service/app/api/: __init__.py  activation.py  active_learning.py  agent.py  celery_load.py  data.py  feedback.py  h5.py  load.py  radiology.py  review.py  seg.py  tasks.py  thumbnail.py
app/service/app/config/: celery_config.py  path_config.py  redis_config.py  zarr_config.py
app/service/app/core/: __init__.py  auth.py  errors.py  logger.py  response.py  settings.py
app/service/app/middlewares/: __init__.py  auth_middleware.py  error_handler.py  logging_middleware.py  websocket_auth_middleware.py
app/service/app/repos/: __init__.py  files.py  logs.py
app/service/app/sdks/: __init__.py  storage.py
app/service/app/services/: __init__.py  active_learning_service.py  agent_service.py  auto_activation_service.py  bundles_service.py  celery_thumbnail_service.py  data.py  feedback_service.py  h5_repack_service.py  h5_service.py  load_service.py  model_store.py  radiology_service.py  redis_task_storage.py  register_service.py  review.py  seg_service.py  task_scheduler.py  tasks_service.py  thread_safe_thumbnail_service.py  thumbnail_cache_service.py  thumbnail_service.py  tile_cache_service.py  tile_service.py  type_manage_service.py
app/service/app/utils/: __init__.py  (+8 more)
app/service/storage/: model_registry.json  model_registry_preset.json
(+534 files in other folders)
